# system-update-kcm

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh
kcm/: CMakeLists.txt  kcm_software_update.cpp  kcm_software_update.h  kcm_software_update.json  softwareupdatebackend.cpp  softwareupdatebackend.h
kcm/ui/: DoneView.qml  ErrorView.qml  InfoRow.qml  ProgressView.qml  RollbackConfirm.qml  RollbackDone.qml  ScheduledView.qml  UpToDateView.qml  UpdateAvailable.qml  main.qml
po/: kcm_software_update.pot
po/de/: kcm_software_update.po
po/es/: kcm_software_update.po
po/fr/: kcm_software_update.po
po/it/: kcm_software_update.po
po/ja/: kcm_software_update.po
po/pl/: kcm_software_update.po
po/ru/: kcm_software_update.po
po/tr/: kcm_software_update.po
po/vi/: kcm_software_update.po
